--- a/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
+++ b/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
@@ -52,26 +52,23 @@
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <Import Project="$(FSharpTargetsPath)" Condition="exists('$(FSharpTargetsPath)')" />
   <ItemGroup>
-    <Compile Include="Core\Basics.fs" />
     <Compile Include="Core\Telemetry.fs" />
     <Compile Include="Core\Utilities.fs" />
     <Compile Include="Core\PriorityQueue.fs" />
     <Compile Include="Core\WeakSet.fs" />
     <Compile Include="Core\Delta.fs" />
     <Compile Include="Core\ReferenceCountingSet.fs" />
-    <Compile Include="Core\TimeList.fs" />
     <Compile Include="Core\Cache.fs" />
     <Compile Include="Core\Core.fs" />
     <Compile Include="Core\Validation.fs" />
     <Compile Include="Mod\Mod.fs" />
-    <Compile Include="Mod\InstancedMod.fs" />
     <Compile Include="Mod\History.fs" />
-    <Compile Include="AdaptiveSet\pmap.fs" />
-    <Compile Include="AdaptiveSet\deltaset.fs" />
-    <Compile Include="AdaptiveSet\prefset.fs" />
+    <Compile Include="AdaptiveSet\asetcore.fs" />
+    <Compile Include="AdaptiveSet\cset.fs" />
     <Compile Include="AdaptiveSet\aset.fs" />
-    <Compile Include="AdaptiveList\deltalist.fs" />
-    <Compile Include="AdaptiveList\plist.fs" />
+    <Compile Include="AdaptiveList\alistcore.fs" />
+    <Compile Include="AdaptiveList\clist.fs" />
+    <Compile Include="AdaptiveList\corderedset.fs" />
     <Compile Include="AdaptiveList\alist.fs" />
     <Compile Include="AdaptiveFunc\AdaptiveFunc.fs" />
     <Compile Include="Builders.fs" />
