--- a/src/Tests/Aardvark.Base.FSharp.Tests/Aardvark.Base.FSharp.Tests.fsproj
+++ b/src/Tests/Aardvark.Base.FSharp.Tests/Aardvark.Base.FSharp.Tests.fsproj
@@ -68,6 +68,7 @@
     <Compile Include="HMap.fs" />
     <Compile Include="HSet.fs" />
     <Compile Include="PList.fs" />
+    <Compile Include="MapExt.fs" />
     <Compile Include="Entry.fs" />
     <Content Include="app.config" />
   </ItemGroup>
