--- a/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
+++ b/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
@@ -75,6 +75,7 @@
     <Compile Include="Datastructures\Mutable\AVL.fs" />
     <Compile Include="Datastructures\Mutable\StableSet.fs" />
     <Compile Include="Datastructures\Mutable\ConcurrentHashQueue.fs" />
+    <Compile Include="Datastructures\Mutable\BVH.fs" />
     <Compile Include="Datastructures\Immutable\SetOperation.fs" />
     <Compile Include="Datastructures\Immutable\ElementOperation.fs" />
     <Compile Include="Datastructures\Immutable\Index.fs" />
