changed Report.Line to use crlf so that output looks proper in editors like notepad.exe too; split Report.cs to multiple files;

--- a/src/Aardvark.Base/Aardvark.Base.csproj
+++ b/src/Aardvark.Base/Aardvark.Base.csproj
@@ -118,7 +118,6 @@
     <Compile Include="Images\TensorExtensions.cs" />
     <None Include="Images\TensorExtensions_template.cs" />
     <Compile Include="Images\TensorExtensions_auto.cs" />
-    <Compile Include="IO\Report.cs" />
     <Compile Include="IO\StreamCodeReader.cs" />
     <Compile Include="IO\StreamCodeReader_auto.cs" />
     <None Include="IO\StreamCodeReader_template.cs" />
@@ -162,6 +161,22 @@
     <Compile Include="Rendering\RasterizerState.cs" />
     <Compile Include="Rendering\SamplerState.cs" />
     <Compile Include="Rendering\StencilMode.cs" />
+    <Compile Include="Reporting\FilterLogTarget.cs" />
+    <Compile Include="Reporting\IJobReporter.cs" />
+    <Compile Include="Reporting\ILogTarget.cs" />
+    <Compile Include="Reporting\IReportable.cs" />
+    <Compile Include="Reporting\IReporter.cs" />
+    <Compile Include="Reporting\JobReporter.cs" />
+    <Compile Include="Reporting\LogMsg.cs" />
+    <Compile Include="Reporting\MultiLogTarget.cs" />
+    <Compile Include="Reporting\NullReporter.cs" />
+    <Compile Include="Reporting\PerThreadJobReporter.cs" />
+    <Compile Include="Reporting\PerThreadLogTarget.cs" />
+    <Compile Include="Reporting\Report.cs" />
+    <Compile Include="Reporting\ReportJob.cs" />
+    <Compile Include="Reporting\Skipper.cs" />
+    <Compile Include="Reporting\TestInfo.cs" />
+    <Compile Include="Reporting\TextLogTarget.cs" />
     <Compile Include="Runtime\Introspection.cs" />
     <Compile Include="Telemetry\Debug.cs" />
     <Compile Include="Telemetry\Environment.cs" />
