[Incremental] more convenience stuff, boring tests for CList.mapUse

--- a/src/Tests/Aardvark.Base.Incremental.Tests/Aardvark.Base.Incremental.Tests.fsproj
+++ b/src/Tests/Aardvark.Base.Incremental.Tests/Aardvark.Base.Incremental.Tests.fsproj
@@ -69,6 +69,7 @@
     <Compile Include="ModTests.fs" />
     <Compile Include="ASetTests.fs" />
     <Compile Include="AListTests.fs" />
+    <Compile Include="AListTestsNew.fs" />
     <Compile Include="AMapTests.fs" />
     <Compile Include="ASetPerformance.fs" />
     <Compile Include="AgTests.fs" />
