--- a/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
+++ b/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Math\PolynomialTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Telemetry\TelemetryTests.cs" />
+    <Compile Include="Tensors\TensorMatrixTests.cs" />
     <Compile Include="TestSuite\TestSuite.cs" />
     <Compile Include="Trafos\MatrixTests.cs" />
     <Compile Include="Trafos\TrafoTests.cs" />
