--- a/.gitignore
+++ b/.gitignore
@@ -14,37 +14,6 @@ Bin
 *.*~
 /buildLog.log
 /src/.vs
-/src/Aardvark.Base/AlgoDat/Delegates_generator.cs
-/src/Aardvark.Base/AlgoDat/Dict_generator.cs
-/src/Aardvark.Base/AlgoDat/Sorting_generator.cs
-/src/Aardvark.Base/AlgoDat/Tuples_generator.cs
-/src/Aardvark.Base/Extensions/SequenceExtensions_generator.cs
-/src/Aardvark.Base/Geometry/Geometry1i_generator.cs
-/src/Aardvark.Base/Geometry/Geometry_generator.cs
-/src/Aardvark.Base/IO/StreamCodeReader_generator.cs
-/src/Aardvark.Base/IO/StreamCodeWriter_generator.cs
-/src/Aardvark.Base/Math/Color_generator.cs
-/src/Aardvark.Base/Math/Complex_generator.cs
-/src/Aardvark.Base/Math/Fun_generator.cs
-/src/Aardvark.Base/RangesBoxes/Box_generator.cs
-/src/Aardvark.Base/Tensors/Accessors_generator.cs
-/src/Aardvark.Base/Tensors/Tensor_generator.cs
-/src/Aardvark.Base/Trafos/Euclidean2_generator.cs
-/src/Aardvark.Base/Trafos/Euclidean3_generator.cs
-/src/Aardvark.Base/Trafos/M33_generator.cs
-/src/Aardvark.Base/Trafos/Matrix_generator.cs
-/src/Aardvark.Base/Vectors/VectorIEnumerableExtensions_generator.cs
-/src/Aardvark.Base/Vectors/VectorTypeConverter_generator.cs
-/src/Aardvark.Base/Vectors/Vector_generator.cs
-/src/Aardvark.Base/Trafos/M22_generator.cs
-/src/Aardvark.Base/Trafos/M34_generator.cs
-/src/Aardvark.Base/Trafos/M44_generator.cs
-/src/Aardvark.Base/Trafos/Rot2_generator.cs
-/src/Aardvark.Base/Trafos/Rot3_generator.cs
-/src/Aardvark.Base/Trafos/Similarity3_generator.cs
-/src/Aardvark.Base/Trafos/Scale3_generator.cs
-/src/Aardvark.Base/Trafos/Shift3_generator.cs
-/src/Aardvark.Base/Extensions/FuncActionExtensions_generator.cs
 tmp
 /docs
 /src/Aardvark.Base/Images/TensorExtensions_generator.cs
@@ -55,3 +24,5 @@ tmp
 /tests.out
 /*.log
 /src/Aardvark.Base/Tensors/TensorMathExt_generator.cs
+**/*.csproj.user
+**/*_generator.cs
