--- a/src/Aardvark.Base.Incremental/paket.template
+++ b/src/Aardvark.Base.Incremental/paket.template
@@ -1,6 +1,9 @@
 type project
 id Aardvark.Base.Incremental
 version 1.0
-authors VRVis Research Center
+authors Aardvark Platform Team
+owners Aardvark Platform Team
+projectUrl http://github.com/aardvark-platform
+licenseUrl http://www.apache.org/licenses/LICENSE-2.0.txt
 description
-    Aardvark.Base.Incremental provides a framework for incremental computations
+    Aardvark is an open-source platform for visual computing, real-time graphics and visualization.
