--- a/src/Aardvark.Base.Essentials/paket.template
+++ b/src/Aardvark.Base.Essentials/paket.template
@@ -1,8 +1,11 @@
 type project
 id Aardvark.Base.Essentials
-authors VRVis Research Center
+authors Aardvark Platform Team
+owners Aardvark Platform Team
+projectUrl http://github.com/aardvark-platform
+licenseUrl http://www.apache.org/licenses/LICENSE-2.0.txt
 description
-    Aardvark.Base is a collection of data structures and algorithms for computer graphics and visualization. It is under active development since 2006 as part of a much larger set of libraries at VRVis Research Center.
+    Aardvark is an open-source platform for visual computing, real-time graphics and visualization.
 files
     ..\..\bin\Release\Aardvark.Base.Essentials.dll ==> lib\net45
     ..\..\bin\Release\Aardvark.Base.Essentials.pdb ==> lib\net45
