--- a/src/Aardvark.Base.FSharp/paket.template
+++ b/src/Aardvark.Base.FSharp/paket.template
@@ -1,8 +1,11 @@
 type project
 id Aardvark.Base.FSharp
-authors VRVis Research Center
+authors Aardvark Platform Team
+owners Aardvark Platform Team
+projectUrl http://github.com/aardvark-platform
+licenseUrl http://www.apache.org/licenses/LICENSE-2.0.txt
 description
-    FSharp Extensions for Aardvark.Base
+    Aardvark is an open-source platform for visual computing, real-time graphics and visualization.
 files
     ..\..\bin\Release\Aardvark.Base.FSharp.dll ==> lib\net45
     ..\..\bin\Release\Aardvark.Base.FSharp.pdb ==> lib\net45
