added comments to ConvexClipped (Issue: whats the positive side of a line?); added test/example of polygon clipping using Hull3d (non-intuitive);

--- a/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
+++ b/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
@@ -14,7 +14,7 @@
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\Solutions\</SolutionDir>
     <RestorePackages>true</RestorePackages>
     <TargetFrameworkProfile />
-	<AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -55,6 +55,7 @@
     <Compile Include="AlgoDat\HigherOrderFunctionsTests.cs" />
     <Compile Include="AlgoDat\SortingTests.cs" />
     <Compile Include="Extensions\ListHeapTests.cs" />
+    <Compile Include="Geometry\PolygonClipping.cs" />
     <Compile Include="Math\ColorTests.cs" />
     <Compile Include="Math\PolynomialTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -74,6 +75,7 @@
       <Name>Aardvark.Base</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
