--- a/src/Aardvark.Data.Vrml97/Aardvark.Data.Vrml97.csproj
+++ b/src/Aardvark.Data.Vrml97/Aardvark.Data.Vrml97.csproj
@@ -65,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="paket.references" />
+    <None Include="paket.template" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
