--- a/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
+++ b/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Extensions\ListHeapTests.cs" />
     <Compile Include="Math\ColorTests.cs" />
     <Compile Include="Math\PolynomialTests.cs" />
+    <Compile Include="Plane\PlaneTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Telemetry\TelemetryTests.cs" />
     <Compile Include="TestSuite\TestSuite.cs" />
