--- a/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
+++ b/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Geometry\PolygonClipping.cs" />
     <Compile Include="Math\ColorTests.cs" />
     <Compile Include="Math\PolynomialTests.cs" />
+    <Compile Include="Plane\PlaneTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RangesBoxes\CellTests.cs" />
     <Compile Include="Telemetry\TelemetryTests.cs" />
