improved docs for Box*.[Contains|Intersects]; add Cell.Parent, Cell.GetCenter()

--- a/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
+++ b/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Math\PolynomialTests.cs" />
     <Compile Include="Plane\PlaneTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RangesBoxes\BoxTests.cs" />
     <Compile Include="RangesBoxes\CellTests.cs" />
     <Compile Include="Telemetry\TelemetryTests.cs" />
     <Compile Include="Tensors\TensorMatrixTests.cs" />
