--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ before_install:
   - sudo apt-get update -qq > /dev/null
   - sudo apt-get install -qq mono-devel > /dev/null
   - mozroots --import --sync > /dev/null
+  - sh ./build.sh restore
 script: sh ./build.sh
 dist: trusty
