adding "dotnet restore ..." to build scripts as workaround

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,8 @@ before_install:
   - dotnet restore src\Aardvark.Base.Extensions
   - dotnet restore src\Aardvark.Base.Delegates
   - dotnet restore src\Aardvark.Base.Telemetry
+  - dotnet restore src\Aardvark.Base.Reporting
+  - dotnet restore src\Aardvark.Base.TextParser
+  - dotnet restore src\Aardvark.Base.Symbol
 script: sh ./build.sh
 dist: trusty
